# RedTea

./: CMakeLists.txt
Engine/: CMakeLists.txt  _main.cpp
Engine/Common/: CMakeLists.txt  common.h  compiler_option.h  event.h  object.cpp  object.h
Engine/Common/ispc/: CMakeLists.txt  simple.ispc  simple_ispc.h  vector.ispc  vector_ispc.cpp  vector_ispc.h
Engine/Common/logger/: logger.cpp  logger.h  ostream.cpp  ostream.h
Engine/Common/math/: CMakeLists.txt  matrix.h  matrix_helper.h  quaternion.h  quaternion_helper.h  vector.h  vector_helper.h
Engine/Common/utils/: lockfree_queue.h  memory.cpp  memory.h  struct_of_arrays.h
Engine/Core/: CMakeLists.txt  component.h  component_manager.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  world.cpp  world.h
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/Application/: RedteaApp.cpp  RedteaApp.h  redtea_app.cpp  redtea_app.h
Engine/Runtime/Device/: CMakeLists.txt  Window.cpp  Window.h  idevice.h  iswapchain.h  native_window.h  native_window_win.cpp  window.cpp  window.h
Engine/Runtime/Device/Backend/d3d12/: d3d12-backend.h  d3d12-buffer.cpp  d3d12-commandlist.cpp  d3d12-compute.cpp  d3d12-constants.cpp  d3d12-descriptor-heap.cpp  d3d12-device.cpp  d3d12-driver.cpp  d3d12-driver.h  d3d12-graphics.cpp  d3d12-meshlets.cpp  d3d12-queries.cpp  d3d12-raytracing.cpp  d3d12-resource-bindings.cpp  d3d12-shader.cpp  d3d12-state-tracking.cpp  d3d12-swapchain.cpp  d3d12-texture.cpp  d3d12-upload.cpp  d3d12.h  dxgi-format.cpp  dxgi-format.h
Engine/Runtime/Device/Backend/directx/: dx12_device.cpp  dx12_device.h  dx12_driver.cpp  dx12_driver.h  dx12_resource.cpp  dx12_resource.h
Engine/Runtime/Device/Backend/opengl/: egl_platform.cpp  egl_platform.h  gl_context.cpp  gl_context.h  gl_device.cpp  gl_device.h  gl_platform.h  gl_resource.cpp  gl_resource.h  gles_device.cpp  gles_device.h
Engine/Runtime/Device/RHI/: command_buffer.cpp  command_buffer.h  containers.cpp  containers.h  device.h  misc.h  resource.h  rhi.h  rhi_base.cpp  rhi_utils.cpp  rhi_utils.h  ringbuffer.cpp  ringbuffer.h  state-tracking.cpp  state-tracking.h
Test/: CMakeLists.txt  test.cpp  test_common.cpp  test_core.cpp  test_device.cpp  test_dx.cpp  test_gl.cpp  test_math.cpp  test_soa.cpp
